--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
             <img src="./assets/cadeira.png" alt="cadeira com roupas"
                 class="w-56 h-72 object-cover scale-150 -translate-x-14 -translate-y-10">
             <div class="flex flex-col my-16 text-center gap-3">
-                <p class="text-4xl">
-                    <span class="block sm:inline font-bold">SUPER</span> <span>SALE</span>
+                <p class="text-4xl sm:text-5xl">
+                    <span class="block font-bold sm:inline">SUPER</span> <span>SALE</span>
                 </p>
-                <p style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);" class="text-xs text-[#005CFF] font-bold">ITENS
+                <p style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);"
+                    class="text-xs text-[#005CFF] font-bold sm:text-sm">ITENS
                     SELECIONADOS COM ATÉ
-                    <br /><span class="text-3xl">50%OFF</span>
+                    <br /><span class="text-3xl sm:text-4xl">50%OFF</span>
                 </p>
             </div>
         </section>
@@ -128,9 +129,74 @@
                         <p class="text-base font-bold">R$ 79,90</p>
                         <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
 
+                        <button class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar
+                        </button>
+                    </div>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
+                        </div>
+
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
+
                         <button
                             class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
-                    </div> <!-- If we need navigation buttons -->
+                    </div>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
+                        </div>
+
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
+
+                        <button
+                            class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
+                    </div>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
+                        </div>
+
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
+
+                        <button
+                            class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
+                    </div>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
+                        </div>
+
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
+
+                        <button
+                            class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
+                    </div>
+                    <!-- If we need navigation buttons -->
                     <div class="swiper-button-prev"><img src="./assets/seta-swipper.svg" alt=""></div>
                     <div class="swiper-button-next"><img src="./assets/seta-swipper.svg" alt=""></div>
                 </div>
@@ -139,14 +205,16 @@
 
         </section>
         <!--SECTION PRODUTO DESTAQUE-->
-        <section>
-            <div>
-                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti" class="w-full mt-14">
+        <section class="flex flex-col lg:flex-row lg:items-center">
+            <div class="w-full lg:w-1/2 h-[747px]">
+                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti" class="w-full  lg:w-full">
             </div>
-            <div>
-                <div class="text-[#000000] flex flex-col gap-4 mx-6 my-10">
-                    <h4 class="text-2xl font-bold">LOREM IPSUM</h4>
-                    <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
+            <div class="lg:w-1/2 flex items-center justify-center">
+                <div class=" text-[#000000] flex flex-col gap-4 mx-6 my-10">
+                    <h4 class="text-2xl font-bold lg:text-3xl">LOREM IPSUM</h4>
+                    <p class="text-sm tracking-wider lg:text-lg lg:tracking-normal">Duis consectetur metus nec lacus
+                        auctor dignissim.
+                        Mauris vitae
                         finibus dui.
                         Mauris
                         laoreet lacus ut
@@ -156,7 +224,9 @@
                         Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
                         a
                         libero commodo egestas efficitur id augue.</p>
-                    <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
+                    <p class="text-sm tracking-wider lg:text-lg lg:tracking-normal">Duis consectetur metus nec lacus
+                        auctor dignissim.
+                        Mauris vitae
                         finibus dui. Mauris
                         laoreet lacus ut
                         eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
