Refatora seção produto destaque para layout mobile

--- a/index.html
+++ b/index.html
@@ -205,16 +205,14 @@
 
         </section>
         <!--SECTION PRODUTO DESTAQUE-->
-        <section class="flex flex-col lg:flex-row lg:items-center">
-            <div class="w-full lg:w-1/2 h-[747px]">
-                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti" class="w-full  lg:w-full">
+        <section>
+            <div>
+                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti" class="w-full mt-14">
             </div>
-            <div class="lg:w-1/2 flex items-center justify-center">
-                <div class=" text-[#000000] flex flex-col gap-4 mx-6 my-10">
-                    <h4 class="text-2xl font-bold lg:text-3xl">LOREM IPSUM</h4>
-                    <p class="text-sm tracking-wider lg:text-lg lg:tracking-normal">Duis consectetur metus nec lacus
-                        auctor dignissim.
-                        Mauris vitae
+            <div>
+                <div class="text-[#000000] flex flex-col gap-4 mx-6 my-10">
+                    <h4 class="text-2xl font-bold">LOREM IPSUM</h4>
+                    <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
                         finibus dui.
                         Mauris
                         laoreet lacus ut
@@ -224,9 +222,7 @@
                         Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit
                         a
                         libero commodo egestas efficitur id augue.</p>
-                    <p class="text-sm tracking-wider lg:text-lg lg:tracking-normal">Duis consectetur metus nec lacus
-                        auctor dignissim.
-                        Mauris vitae
+                    <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
                         finibus dui. Mauris
                         laoreet lacus ut
                         eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia
