--- a/index.html
+++ b/index.html
@@ -205,11 +205,12 @@
 
         </section>
         <!--SECTION PRODUTO DESTAQUE-->
-        <section>
-            <div>
-                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti" class="w-full mt-14">
+        <section class="flex flex-col lg:flex-row lg:items-center min-h-screen lg:px-20">
+            <div class="bg-[#C2C2C2] lg:w-1/2 lg:h-auto">
+                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti"
+                    class="w-full mt-14 lg:mt-0 lg:h-full lg:object-cover">
             </div>
-            <div>
+            <div class="lg:w-1/2 flex items-center">
                 <div class="text-[#000000] flex flex-col gap-4 mx-6 my-10">
                     <h4 class="text-2xl font-bold">LOREM IPSUM</h4>
                     <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
