--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
             </div>
         </section>
         <!-- Section Lançamentos -->
-        <section>
+        <section class="px-4 items-center mb-6">
             <div class="flex justify-between items-center m-4">
                 <h2 class="text-base font-bold">Lançamentos</h2>
                 <p class="underline font-bold">Ver mais</p>
             </div>
 
             <!-- Slider main container -->
-            <div class="swiper ">
-                <div class="swiper-wrapper mx-4">
+            <div class="swiper">
+                <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
                         <span
@@ -131,22 +131,6 @@
 
                         <button class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar
                         </button>
-                    </div>
-                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
-                        <span
-                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
-                        <img src="./assets/anuncio.svg" alt="produto">
-                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
-                        <div class="flex items-center gap-3 ">
-                            <p class="line-through"> R$ 100,00</p>
-                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
-                        </div>
-
-                        <p class="text-base font-bold">R$ 79,90</p>
-                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
-
-                        <button
-                            class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
                     </div>
                     <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative">
                         <span
