Ajusta a seção do segundo banner para melhorar o layout e a responsividade em dispositivos móveis

--- a/index.html
+++ b/index.html
@@ -218,35 +218,46 @@
                         libero commodo egestas efficitur id augue.</p>
                 </div>
         </section>
-        <section class="bg-[#DEDEDE] px-5 py-7 text-[#000000] mb-14">
-            <img src="./assets/segundo banner.svg" alt="" class="w-full">
-            <h4 class="text-xl font-bold text-center my-5">LOREM IPSUM</h4>
-            <div class="flex flex-col gap-5">
-                <div class="flex items-center gap-4">
-                    <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
-                    <p class="text-xs">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
-                        nascetur
-                        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
-                </div>
-                <div class="flex items-center gap-4">
-                    <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
-                    <p class="text-xs">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
-                        nascetur
-                        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
-                </div>
-                <div class="flex items-center gap-4">
-                    <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
-                    <p class="text-xs">Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
-                        nascetur
-                        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+        <!-- SECTION BANNER -->
+        <section
+            class=" flex flex-col bg-[#DEDEDE] px-5 py-7 text-[#000000] mb-14 lg:flew-row lg:flex-row-reverse lg:px-20 lg:items-center lg:gap-11">
+            <img src="./assets/segundo banner.svg" alt="" class="w-full lg:w-1/2">
+            <div class="w-1/2">
+                <h4 class="text-xl font-bold text-center my-5 lg:text-3xl">LOREM IPSUM</h4>
+                <div class="flex flex-col gap-5">
+                    <div class="flex items-center gap-4">
+                        <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
+                        <p class="text-xs lg:text-lg">Aenean massa. Cum sociis natoque penatibus et magnis dis
+                            parturient
+                            montes,
+                            nascetur
+                            ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                    </div>
+                    <div class="flex items-center gap-4">
+                        <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
+                        <p class="text-xs lg:text-lg">Aenean massa. Cum sociis natoque penatibus et magnis dis
+                            parturient
+                            montes,
+                            nascetur
+                            ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                    </div>
+                    <div class="flex items-center gap-4">
+                        <img src="./assets/pin-localização.svg" alt="" class="w-12 h-12 bg-[#005CFF] rounded-full p-3">
+                        <p class="text-xs lg:text-lg">Aenean massa. Cum sociis natoque penatibus et magnis dis
+                            parturient
+                            montes,
+                            nascetur
+                            ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section>
-            <div>
-                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti" class="w-full mt-14">
+        <section class="flex flex-col lg:flex-row lg:items-center min-h-screen lg:px-20">
+            <div class="bg-[#C2C2C2] lg:w-1/2 lg:h-auto">
+                <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti"
+                    class="w-full mt-14 lg:mt-0 lg:h-full lg:object-cover">
             </div>
-            <div>
+            <div class="lg:w-1/2 flex items-center">
                 <div class="text-[#000000] flex flex-col gap-4 mx-6 my-10">
                     <h4 class="text-2xl font-bold">LOREM IPSUM</h4>
                     <p class="text-sm tracking-wider">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae
@@ -270,7 +281,6 @@
                         libero commodo egestas efficitur id augue.</p>
                 </div>
         </section>
-
         <section class="relative">
             <img src="./assets/rodape.png" alt="">
             <p class="bg-[#005CFF] text-[#FFFFFF] text-base font-semibold text-center px-1 py-4 absolute top-1/2 ">
