Ajusta a seção de produto destaque e o rodapé para melhorar a responsividade e o layout

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </div>
 
                 <div class="swiper-pagination-bullets flex justify-center mt-4"></div>
-
+            </div>
         </section>
         <!--SECTION PRODUTO DESTAQUE-->
         <section class="flex flex-col lg:flex-row lg:items-center min-h-screen lg:px-20">
@@ -217,6 +217,7 @@
                         a
                         libero commodo egestas efficitur id augue.</p>
                 </div>
+            </div>
         </section>
         <!-- SECTION BANNER -->
         <section
@@ -280,6 +281,7 @@
                         a
                         libero commodo egestas efficitur id augue.</p>
                 </div>
+            </div>
         </section>
 
         <section class="relative sm:max-h-[660px]">
@@ -394,7 +396,7 @@
                 nonummy
                 nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
                 nostrud exerci.</p>
-            <ul class="flex flex-row gap-12">
+            <ul class="flex flex-wrap justify-center gap-4 sm:gap-6 md:gap-8 lg:gap-12">
                 <li><img src="./assets/lets-encrypt.svg" alt=""></li>
                 <li><img src="./assets/vtex-1.svg" alt=""></li>
                 <li><img src="./assets/avanti.svg" alt=""></li>
@@ -407,7 +409,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src=script.js></script>
-    </section>
 </body>
 
 </html>
