melhorando a responsividade da section SALE

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
         </section>
         <!--SECTION PRODUTO DESTAQUE-->
-        <section class="flex flex-col lg:flex-row lg:items-center min-h-screen lg:px-20">
+        <section class="flex flex-col lg:flex-row lg:items-center lg:px-20">
             <div class="bg-[#C2C2C2] lg:w-1/2 lg:h-auto">
                 <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti"
                     class="w-full mt-14 lg:mt-0 lg:h-full lg:object-cover">
@@ -221,9 +221,9 @@
         </section>
         <!-- SECTION BANNER -->
         <section
-            class=" flex flex-col bg-[#DEDEDE] px-5 py-7 text-[#000000] mb-14 lg:flew-row lg:flex-row-reverse lg:px-20 lg:items-center lg:gap-11">
+            class="flex flex-col bg-[#DEDEDE] px-5 py-7 text-[#000000] mb-14 lg:flew-row lg:flex-row-reverse lg:px-20 lg:items-center lg:gap-11">
             <img src="./assets/segundo banner.svg" alt="" class="w-full lg:w-1/2">
-            <div class="w-1/2">
+            <div class="lg:w-1/2">
                 <h4 class="text-xl font-bold text-center my-5 lg:text-3xl">LOREM IPSUM</h4>
                 <div class="flex flex-col gap-5">
                     <div class="flex items-center gap-4">
@@ -253,7 +253,7 @@
                 </div>
             </div>
         </section>
-        <section class="flex flex-col lg:flex-row lg:items-center min-h-screen lg:px-20">
+        <section class="flex flex-col lg:flex-row lg:items-center lg:px-20">
             <div class="bg-[#C2C2C2] lg:w-1/2 lg:h-auto">
                 <img src="./assets/xicara.png" alt="imagem xicara com o logo avanti"
                     class="w-full mt-14 lg:mt-0 lg:h-full lg:object-cover">
@@ -388,24 +388,22 @@
                 <img src="./assets/formas de pgto/União 39.svg" alt="">
                 <img src="./assets/formas de pgto/boleto.svg" alt="">
             </div>
+            <div class="py-10 px-4 min-h-[100dvh]">
+                <p class="text-xs font-normal mb-10 text-center">Lorem ipsum dolor sit amet, consectetuer adipiscing
+                    elit,
+                    sed diam
+                    nonummy
+                    nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                    quis
+                    nostrud exerci.</p>
+                <ul class="flex flex-wrap justify-center gap-4 sm:gap-6 md:gap-8 lg:gap-12">
+                    <li><img src="./assets/lets-encrypt.svg" alt=""></li>
+                    <li><img src="./assets/vtex-1.svg" alt=""></li>
+                    <li><img src="./assets/avanti.svg" alt=""></li>
+                    <li><img src="./assets/vtex.svg" alt=""></li>
+                </ul>
+            </div>
         </section>
-
-        <div class="my-10 mx-4">
-            <p class="text-xs font-normal mb-10 text-center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam
-                nonummy
-                nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                nostrud exerci.</p>
-            <ul class="flex flex-wrap justify-center gap-4 sm:gap-6 md:gap-8 lg:gap-12">
-                <li><img src="./assets/lets-encrypt.svg" alt=""></li>
-                <li><img src="./assets/vtex-1.svg" alt=""></li>
-                <li><img src="./assets/avanti.svg" alt=""></li>
-                <li><img src="./assets/vtex.svg" alt=""></li>
-            </ul>
-        </div>
-
-
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src=script.js></script>
