--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
         rel="stylesheet">
+    <style>
+        .swiper-button-next::after,
+        .swiper-button-prev::after {
+            display: none !important;
+        }
+    </style>
+
 </head>
 
 <body style="font-family: 'Nunito Sans', sans-serif;" class="text-sm">
@@ -185,9 +192,11 @@
                         <button
                             class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
                     </div>
-                    <!-- If we need navigation buttons -->
-                    <div class="swiper-button-prev"><img src="./assets/seta-swipper.svg" alt=""></div>
-                    <div class="swiper-button-next"><img src="./assets/seta-swipper.svg" alt=""></div>
+
+                </div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"><img src="./assets/seta-swipper.svg" alt="setaprev"></div>
+                <div class="swiper-button-next"><img src="./assets/seta-swipper.svg" alt="seta next" class="rotate-180">
                 </div>
 
                 <div class="swiper-pagination-bullets flex justify-center mt-4"></div>
