--- a/index.html
+++ b/index.html
@@ -446,9 +446,10 @@
         <div class="absolute right-12 top-0 mt-4 w-60 h-72">
             <!-- Imagem -->
             <img src="./assets/segundo-banner.png" alt="Banner" class="w-full h-full rounded-lg object-cover">
+            <div class="absolute inset-0 bg-gradient-to-l from-black/80 via-transparent to-transparent"></div>
 
             <!-- Texto sobre a imagem -->
-            <p class="absolute top-10 left-4 text-white text-2xl font-semibold leading-tight">
+            <p class="absolute top-6 left-4 text-white text-2xl font-semibold">
                 Confira os<br>
                 Produtos<br>
                 Que <br>
@@ -456,7 +457,7 @@
                 De chegar
             </p>
             <button
-                class="absolute top-60 left-4 border border-[#FFFFFF] text-[#FFFFFF] p-2 rounded-lg hover:text-[#005CFF] hover:border-[#005CFF] ">VER
+                class="absolute top-55 left-4 border border-[#FFFFFF] text-[#FFFFFF] p-2 rounded-lg hover:text-[#005CFF] hover:border-[#005CFF] ">VER
                 TODOS</button>
         </div>
 
